--- a/mathquiz.html
+++ b/mathquiz.html
@@ -1,3 +1,8 @@
+<!--
+  Copyright 2011 Kevin Reid, under the terms of the MIT X license
+  found at <http://www.opensource.org/licenses/mit-license.html>.
+-->
+
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
   "http://www.w3.org/TR/html4/strict.dtd">
 <html manifest="mathquiz.manifest">
