Update dead CDN link.

--- a/mathquiz.html
+++ b/mathquiz.html
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, target-densitydpi=device-dpi" />
   <script type="text/javascript" src="jquery-1.5.2.js"></script>
   <script type="text/javascript" src="mathquiz.js"></script>
-  <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_SVG"></script>
   <link rel="stylesheet" href="mathquiz.css" type="text/css" media="screen">
 </head><body>
 
